# pokemon_database

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py
app/csv_generator/: README.md  __init__.py  csv_builder.py  main.py  models.py
app/scraper/: README.md  __init__.py  http_client.py  main.py  output.py  pokemon_abilities.py  pokemon_basic.py  pokemon_moves.py  pokemon_urls.json  progress.py
app/sql_generator/: __init__.py  json_loader.py  main.py  sql_builder.py
docs/: DB設計書.md  app_scraper設計.md  スクレイピングツール開発計画.md  本番環境データ投入手順書.md  本番環境投入手順.md
scripts/: import_to_supabase.sh
supabase/: config.toml
supabase/migrations/: 20250102000000_create_sv_schema.sql  20251102142819_allow_null_damage_class.sql  20251102142820_remove_pokemon_moves_notes_column.sql
