[project]
name = "pokemon-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shun Fukusumi", email = "shun.fukusumi@gmail.com" }
]
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
